[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/reflex_clerk_api"]

[tool.hatch.build]
artifacts = ["*.pyi"]

[tool.hatch.version]
path = "custom_components/reflex_clerk_api/__init__.py"

[project]
name = "reflex-clerk-api"
description = "Reflex custom component wrapping @clerk/clerk-react and integrating the clerk-backend-api"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Tim Child", email = "timjchild@gmail.com" }]
keywords = ["reflex","reflex-custom-components", "clerk", "clerk-backend-api"]
dynamic = ["version"]

dependencies = [
    "authlib>=1.5.1,<2.0.0",
    "clerk-backend-api>=5.0.0,<5.1.0",
    "reflex>=0.8.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    # "Framework :: Reflex",  # Should be added once this is accepted
]

[project.urls]
documentation = "https://timchild.github.io/reflex-clerk-api/about/"
repository = "https://github.com/TimChild/reflex-clerk-api"
issues = "https://github.com/TimChild/reflex-clerk-api/issues"
homepage = "https://reflex-clerk-api-demo.adventuresoftim.com"

[tool.pytest.ini_options]
# addopts = "--headed"

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [
    "**/*.pyi",  # Exclude auto-generated .pyi files (not committed, have generator bugs)
    ".venv",     # Exclude virtual environment
    "dist",      # Exclude build artifacts
    "*.egg-info",
    "**/.web",   # Exclude Reflex web build directory
    "**/node_modules",  # Exclude npm dependencies
]

[tool.ruff.lint]
extend-select = ["I", "RUF", "T20"]
ignore = ["RUF012"]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "dotenv>=0.9.9",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.8",
    "pre-commit>=4.1.0",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
    "pytest-pretty>=1.2.0",
    "ruff>=0.9.10",
    "semver>=3.0.4",
    "reflex>=0.8.0",
    "hatchling>=1.27.0",
    "uvicorn>=0.38.0",
    "psutil>=7.0.0",
]
